# bonsai-osp-template-test

./: Cargo.toml  README.md
contracts/: BonsaiStarter.sol
host/: Cargo.toml
host/src/: main.rs  osp.rs  raw.rs
lib/bonsai-lib-sol/src/: BonsaiCheats.sol
methods/guest/: Cargo.toml
relay/: Cargo.toml
relay/src/: main.rs
script/: Deploy.s.sol
scripts/: Deploy.s.sol
tests/: BonsaiStarter.t.sol
