[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10.0"
serde = "1.0"
ethabi = { version = "18.0", default-features = false }
clap = { version = "4.3", features = ["derive", "env"] }

# RiscZero
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "6f5b3497a611aad8d3a5db7e03c5e2adf02a26db" }

# Local
bonsai-starter-methods = { path = "../methods" }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
