[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10.0"
serde = "1.0"
ethabi = { version = "18.0", default-features = false }
clap = { version = "4.3", features = ["derive", "env"] }

# RiscZero
risc0-zkvm = { workspace = true }

# Local
methods = { workspace = true }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
