[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10.0"
serde = "1.0"
serde_json = "1.0.104"
impl-serde = "0.4.0"
ethabi = { version = "18.0", default-features = false }
clap = { version = "4.3", features = ["derive", "env"] }
hex = "0.4.3"

codec = { package = "parity-scale-codec", version = "3.0", features = ["derive"] }
wasmi = { git = "https://github.com/alt-research/accel-wasmi", branch = "risc0" }
wat = "1"

# RiscZero
risc0-zkvm = { workspace = true }

# Local
methods = { workspace = true }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
